--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Fondamento&display=swap" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 	<title>Full Analog Clock</title>
 
 	<style>
@@ -34,6 +34,7 @@
 				#09090d);
 			font-family: "Fondamento", cursive;
 			color: black;
+			font-family: 'Noto Serif', serif;
 		}
 
 		.clock {
@@ -86,7 +87,7 @@
 			top: 0;
 			left: 0;
 			text-align: center;
-			font-size: 2rem;
+			font-size: 25px;
 			font-weight: 700;
 			padding: 18px;
 		}
@@ -109,7 +110,7 @@
 
 		.num3 {
 			transform: rotate(90deg);
-			font-size: 60px;
+			font-size: 50px;
 		}
 
 		.num3 div {
@@ -134,7 +135,7 @@
 
 		.num6 {
 			transform: rotate(180deg);
-			font-size: 60px;
+			font-size: 50px;
 		}
 
 		.num6 div {
@@ -159,7 +160,7 @@
 
 		.num9 {
 			transform: rotate(270deg);
-			font-size: 60px;
+			font-size: 50px;
 		}
 
 		.num9 div {
@@ -183,7 +184,7 @@
 		}
 
 		.num12 {
-			font-size: 60px;
+			font-size: 50px;
 		}
 
 		.hand {
@@ -245,40 +246,40 @@
 			<div class="hour"></div>
 		</div>
 		<div class="num num1">
-			<div>1</div>
+			<div>I</div>
 		</div>
 		<div class="num num2">
-			<div>2</div>
+			<div>II</div>
 		</div>
 		<div class="num num3">
-			<div>3</div>
+			<div>III</div>
 		</div>
 		<div class="num num4">
-			<div>4</div>
+			<div>IV</div>
 		</div>
 		<div class="num num5">
-			<div>5</div>
+			<div>V</div>
 		</div>
 		<div class="num num6">
-			<div>6</div>
+			<div>VI</div>
 		</div>
 		<div class="num num7">
-			<div>7</div>
+			<div>VII</div>
 		</div>
 		<div class="num num8">
-			<div>8</div>
+			<div>VIII</div>
 		</div>
 		<div class="num num9">
-			<div>9</div>
+			<div>IX</div>
 		</div>
 		<div class="num num10">
-			<div>10</div>
+			<div>X</div>
 		</div>
 		<div class="num num11">
-			<div>11</div>
+			<div>XI</div>
 		</div>
 		<div class="num num12">
-			<div>12</div>
+			<div>XII</div>
 		</div>
 		<div id="digital"></div>
 	</div>
